More updates for pypi configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = paspy-pascoscientific
-version = 0.1.0
+name = paspy
+version = 0.1.0b
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
