--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["bleak"]
+requires = ["setuptools >= 40.6.0", "wheel", "bleak"]
 build-backend = "setuptools.build_meta"
