Add bleak dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = paspy
-version = 0.1.0b
+version = 0.1.0b3
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -21,6 +21,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    bleak
+include_package_data = True
 
 [options.packages.find]
 where = src
