--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = paspy
-version = 0.1.0b7
+name = pasco
+version = 0.1.13
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -11,7 +11,7 @@ long_description_content_type = text/markdown
 #    Bug Tracker = https://github.com/pypa/sampleproject/issues
 classifiers =
     Programming Language :: Python :: 3.7
-    License :: OSI Approved :: MIT License
+    License :: Other/Proprietary License
     Operating System :: Microsoft :: Windows
     Operating System :: MacOS
     Operating System :: Unix
