--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pasco
-version = 0.1.15
+version = 0.1.18
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -11,6 +11,7 @@ long_description_content_type = text/markdown
 #    Bug Tracker = https://github.com/pypa/sampleproject/issues
 classifiers =
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     License :: Other/Proprietary License
     Operating System :: Microsoft :: Windows
     Operating System :: MacOS
@@ -20,7 +21,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.7, != 3.9, != 3.10
 install_requires =
     bleak
 include_package_data = True
