Fixed asyncio bug on some IDEs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pasco
-version = 0.2.2
+version = 0.3.0
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -24,6 +24,7 @@ packages = find:
 python_requires = >=3.7, != 3.9, != 3.10
 install_requires =
     bleak
+    nest_asyncio
 include_package_data = True
 
 [options.packages.find]
