More fixes for Mac

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pasco
-version = 0.3.0
+version = 0.3.4
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -21,7 +21,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.7, != 3.9, != 3.10
+python_requires = >=3.7
 install_requires =
     bleak
     nest_asyncio
