--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,16 @@
 [metadata]
 name = pasco
-version = 0.3.41
+version = 0.3.44
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
 long_description = file: README.md
 long_description_content_type = text/markdown
 #url = https://github.com/pypa/sampleproject
-#project_urls =
-#    Bug Tracker = https://github.com/pypa/sampleproject/issues
+project_urls =
+    Bug Tracker = https://github.com/PASCOscientific/pasco_python/issues
 classifiers =
     Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     License :: Other/Proprietary License
     Operating System :: Microsoft :: Windows
     Operating System :: MacOS
@@ -23,7 +22,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    bleak
+    bleak<0.14.0
     nest_asyncio
 include_package_data = True
 
