Support for latest version of bleak

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pasco
-version = 0.3.44
+version = 0.3.45
 author = Waqas Saeed
 author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
@@ -22,7 +22,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    bleak<0.14.0
+    bleak
     nest_asyncio
 include_package_data = True
 
