Updated to work with bleak 0.19.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
 [metadata]
 name = pasco
-version = 0.3.51
+version = 0.3.6
 author = Waqas Saeed
-author_email = wsaeed@pasco.com
 description = PASCO Python API for Wireless Sensors
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -22,7 +21,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    bleak
+    bleak==0.19.0
     nest_asyncio
 include_package_data = True
 
