--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pasco
-version = 0.3.60
+version = 0.3.61
 author = Waqas Saeed
 description = PASCO Python API for Wireless Sensors
 long_description = file: README.md
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.7
 install_requires =
     bleak==0.19.0
-    nest_asyncio
+    nest_asyncio==1.5.6
 include_package_data = True
 
 [options.packages.find]
